<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="@dimen/DIMEN_72PX"
        android:layout_height="@dimen/DIMEN_72PX"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/DIMEN_20PX"
        android:background="@drawable/drawable"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/DIMEN_20PX" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apply_name"
            android:text="@string/test_name"
            android:textColor="@color/black1"
            android:textSize="@dimen/DIMEN_36PX" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_message"
            android:textColor="@color/black1"
            android:id="@+id/apply_msg"
            android:textSize="@dimen/DIMEN_36PX" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/DIMEN_60PX"
        android:background="@color/blue"
        android:id="@+id/bt_agree"
        android:padding="@dimen/DIMEN_20PX"
        android:text="@string/agree"
        android:textColor="@color/white" />

</LinearLayout>