<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    android:orientation="vertical">
    
    <!-- 标题 -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_96PX"
        android:background="@drawable/bg_1">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/login_title_color"
            android:textSize="24sp"
            android:text="@string/register"/>
    </RelativeLayout>
    
    <!-- 账号 -->
    <LinearLayout 
        style="@style/input_layout"
        android:layout_marginTop="@dimen/DIMEN_325PX">
        <ImageView 
            style="@style/input_img"
            android:src="@drawable/icon_mail"/>
        <EditText 
            android:id="@+id/user_edit"
            style="@style/input_edit"
            android:hint="@string/email_phone"/>
    </LinearLayout>
    
    <!--  真实姓名 -->
    <LinearLayout
        style="@style/input_layout"
        android:layout_marginTop="@dimen/DIMEN_20PX" >
        <ImageView 
            style="@style/input_img"
            android:src="@drawable/icon_mail"/>
        <EditText 
            android:id="@+id/real_name_edit"
            style="@style/input_edit"
            android:hint="@string/real_name"/>
    </LinearLayout>
    
    <!-- 密码 -->
    <LinearLayout
        style="@style/input_layout"
        android:layout_marginTop="@dimen/DIMEN_20PX" >
        <ImageView 
            style="@style/input_img"
            android:src="@drawable/icon_lock"/>
        <EditText 
            android:id="@+id/pwd_edit"
            style="@style/input_edit"
            android:inputType="textPassword"
            android:hint="@string/input_pwd"/>
    </LinearLayout>
    
    <!-- 确认密码 -->
    <LinearLayout
        style="@style/input_layout"
        android:layout_marginTop="@dimen/DIMEN_20PX" >
        <ImageView 
            style="@style/input_img"
            android:src="@drawable/icon_lock"/>
        <EditText 
            android:id="@+id/sure_pwd_edit"
            style="@style/input_edit"
            android:inputType="textPassword"
            android:hint="@string/input_sure_pwd"/>
    </LinearLayout>
    
   
    
    <!-- 注册 -->
    <TextView 
        android:id="@+id/signup_tv"
        style="@style/input_button"
        android:layout_marginTop="@dimen/DIMEN_80PX"
        android:text="@string/register"/>
</LinearLayout>
