<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/unused"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:background="@drawable/bg_titlebar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:clickable="true"
            android:text="@string/cancle1"
            android:textColor="@drawable/text_selector"
            android:textSize="@dimen/DIMEN_44PX" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fenpei"
            android:textColor="@color/t_fcfcfc"
            android:textSize="@dimen/DIMEN_44PX" />

        <TextView
            android:id="@+id/tv_ok_allot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/DIMEN_20PX"
            android:clickable="true"
            android:text="@string/ok"
            android:textColor="@drawable/text_selector"
            android:textSize="@dimen/DIMEN_44PX" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gv_contact_allot"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_300PX"
        android:columnWidth="@dimen/DIMEN_200PX"
        android:gravity="center_horizontal"
        android:horizontalSpacing="@dimen/DIMEN_10PX"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="@dimen/DIMEN_10PX" >
    </GridView>

    <com.devsmart.android.ui.HorizontalListView
        android:id="@+id/hlv_group_name_allot"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_150PX" />

    <ListView
        android:id="@+id/lv_contact_allot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>